Changed font, not final yet

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,6 +6,6 @@ html, body {
 body {
   overflow-x: hidden;
   overflow-y: scroll;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
