Wooden border top / bottom fixed :wolf:

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -48,28 +48,28 @@ body {
 }
 
 .content-top-border-6 {
-  background-image: url('../img/png/content_topborder.png');
+  background-image: url('/img/png/content_topborder.png');
   background-size: 100%;
   min-height: 3px;
   background-repeat: no-repeat;
 }
 
 .content-top-border-12 {
-  background-image: url('../img/png/content_topborder.png');
+  background-image: url('/img/png/content_topborder.png');
   background-size: 100%;
   min-height: 5px;
   background-repeat: no-repeat;
 }
 
 .content-bottom-border-6 {
-  background-image: url('../img/png/content_bottomborder.png');
+  background-image: url('/img/png/content_bottomborder.png');
   background-size: 100%;
   min-height: 3px;
   background-repeat: no-repeat;
 }
 
 .content-bottom-border-12 {
-  background-image: url('../img/png/content_bottomborder.png');
+  background-image: url('/img/png/content_bottomborder.png');
   background-size: 100%;
   min-height: 5px;
   background-repeat: no-repeat;
