--- a/resources/assets/sass/background.scss
+++ b/resources/assets/sass/background.scss
@@ -1,27 +1,29 @@
 .bg {
-  position: absolute;
-  top: 0px;
-  left: 0px;
+  position: fixed;
   margin: 0;
   padding: 0;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
 
 .bg-heaven {
   background-image: linear-gradient(180deg, #32DAC0 0%, #EEF6BB 40%);
+  padding: 0;
+  margin: 0;
 }
 
 .bg-landscape {
-  background-image: url('../img/svg/background_landscape.svg');
-  background-repeat: repeat-x;
-  background-attachment: fixed;
-  background-position: 0 bottom;
+  background: url('../img/svg/background_landscape.svg') repeat-x 0 0 fixed;
+  background-size: 80%;
+  margin: 0;
+  padding: 0;
 }
 
 .bg-clouds {
-  background-image: url('../img/svg/background_clouds.svg');
-  background-repeat: repeat-x;
-  background-attachment: fixed;
-  background-position: 0 bottom;
+  background: url('../img/svg/background_clouds.svg') repeat-x 0 0 fixed;
+  background-size: 100%;
+  margin: 0;
+  padding: 0;
 }
