Hide dhbw logo on mobile in admin view

--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -1,7 +1,9 @@
-body {
-  padding-top: 50px;
-}
-
 .admin-font {
   font-family: 'Lato', sans-serif;
+}
+
+@media (min-width: 768px) {
+  body {
+    padding-top: 50px;
+  }
 }
