--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -86,6 +86,16 @@ body {
   max-height: 100px;
 }
 
+.star-text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 30px;
+  z-index: 1;
+}
+
 .task-text {
   text-align: left;
   margin-left: 25px;
